Formatting and Content
More messing around. The biggest changes were to trimming bits of content to prevent wrapping around columns in all sizes, actually writing something for In Living Color, and changing the threshold for the "mobile" vs "desktop" site to be 600px wide. The last thing is an attempt to make all content visible at whatever width, but 600 to 800 still sucks.

--- a/games/index.html
+++ b/games/index.html
@@ -136,11 +136,11 @@
 		<div class="project-div">
 			<div class="project-content-left">
 				<h3 class="subproject-title">The House Where They Dwell</h3>
-				<p>The horror was supposed to be staged.<br><br>The House Where They Dwell is a first-person cooperative game from Half-Brain Games where you and your ghost-hunting TV show crew escape the house, built in Unreal Engine 4 (native audio engine and Blueprints) and version controlled with Git. I was the Audio Director and audio dev, working with a team of 5 to produce and implement the score, VO, sound effects, and audio vision.<br><br>Some of the largest challenges we faced were with sheer audio scope, with the variety of enemies, items, and physics interactions (let alone split-screen audio). I'm most proud of the physics audio, where we covered it, and the VO.</p>
+				<p>The horror was supposed to be staged.<br><br>The House Where They Dwell is a first-person cooperative game from Half-Brain Games where you and your ghost-hunting TV show crew escape the house, built in Unreal Engine 4 (native audio engine and Blueprints) and version controlled with Git. I was the Audio Director and audio dev, working with a team of 5 to produce and implement the score, VO, sound effects, and audio vision.<br><br>The largest challenges we faced were from sheer audio scope, with the variety of enemies, items, and interactions (let alone split-screen). I'm most proud of the physics and the VO.</p>
 			</div>
 			<div class="project-content-right">
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/rjwaGpkC-1E" title="YouTube video player, with the trailer for The House Where They Dwell, for which I did minor video edits and all audio edits, largely with game assets. Note that this game is not accessible, and is much more jank than the trailer lets on." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-				<p>Due to artistic choices with the final boss being a topless spider witch, the game was listed as "Adults Only," despite no other suggestions of adult content. It's jank and buggy (pun not intended) but the vibes are immaculate.</p>
+				<p>Due to artistic choices with the final boss being a topless spider witch, the game was listed as "Adults Only," despite no other suggestions of adult content. It's jank and buggy (pun not intended) and could have done with a few more months in the oven, but the vibes are immaculate.</p>
 				<a class="undecorated-links" href="https://store.steampowered.com/app/1759460/The_House_Where_They_Dwell/">
 					<button class="download-button">Download on Steam</button>
 				</a>
@@ -166,22 +166,15 @@
 		<div class="project-div">
 			<div class="project-content-left">
 				<h3 class="subproject-title">FooFarYall</h3>
-				<p>Crying over spilled milk.<br><br>A silly Western game, made for <a class="decorated-links" href="https://chillennium.com/">Chillennium Game Jam</a> 2016 with Unity and played on one keyboard. All music was recorded &#38; edited on-site. For our efforts we won the award for Special Recognition in Sound; this project directly led to me pursuing Game Audio as a career, and to my involvement with <a class="decorated-links" href="https://loganhardin.xyz/games/#TriseumLiveLab">Triseum &#38; the LIVE Lab.</a></p>
-			</div>
-			<div class="project-content-right">
-				<iframe class="project-video-embed" src="https://www.youtube.com/embed/C72M7S4osKU?si=jCPjNNMdQOeOqWbV" title="YouTube video player, with gameplay of FooFarYall. This game is not accessible, but frankly, you're not missing much." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-			</div>
-		</div>
-		<div class="project-follow-div">
-			<div class="project-content-left">
+				<p>Crying over spilled milk.<br><br>A silly Western game, made for <a class="decorated-links" href="https://chillennium.com/">Chillennium Game Jam</a> with Unity and played on one keyboard. All music was recorded &#38; edited on-site. For our efforts we won the award for Special Recognition in Sound; this project directly led to me pursuing Game Audio as a career, and to my involvement with <a class="decorated-links" href="https://loganhardin.xyz/games/#TriseumLiveLab">Triseum &#38; the LIVE Lab.</a></p>
 				<iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=2752376034/size=small/bgcol=333333/linkcol=ffffff/track=2691759572/transparent=true/" seamless><a href="https://snoopy20111.bandcamp.com/album/hardin-a-collection-of-things-done-for-reasons">Hardin: A collection of things done for reasons by Logan Hardin</a></iframe>
 				<iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=2752376034/size=small/bgcol=333333/linkcol=ffffff/track=382131293/transparent=true/" seamless><a href="https://snoopy20111.bandcamp.com/album/hardin-a-collection-of-things-done-for-reasons">Hardin: A collection of things done for reasons by Logan Hardin</a></iframe>
 			</div>
 			<div class="project-content-right">
+				<iframe class="project-video-embed" src="https://www.youtube.com/embed/C72M7S4osKU?si=jCPjNNMdQOeOqWbV" title="YouTube video player, with gameplay of FooFarYall. This game is not accessible, but frankly, you're not missing much." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 				<p>You can find both tracks on my <a class="decorated-links" href="https://snoopy20111.bandcamp.com/album/hardin-a-collection-of-things-done-for-reasons">Bandcamp album of miscellaneous tracks,</a> and try the game with a friend if you like. </p>
 				<a class="undecorated-links" href="https://embyrs.itch.io/foofaryall">
 					<button class="download-button">Download from Itch.io</button>
-				</a>
 			</div>
 		</div>
 	</div>
