--- a/more/index.html
+++ b/more/index.html
@@ -140,10 +140,17 @@
 		<h2 class="project-title">In Living Color (Art)</h2>
 		<div class="project-div">
 			<div class="project-content-left">
-				<p class="remove-top-margin-text">Aliquam sem et tortor consequat id porta nibh venenatis cras. Parturient montes nascetur ridiculus mus mauris vitae. Sit amet porttitor eget dolor. Vivamus at augue eget arcu dictum varius duis at consectetur. Praesent elementum facilisis leo vel fringilla est ullamcorper. Suspendisse interdum consectetur libero id faucibus. Aliquam id diam maecenas ultricies mi eget. Amet cursus sit amet dictum. Scelerisque mauris pellentesque pulvinar pellentesque habitant morbi tristique.</p>
+				<p class="remove-top-margin-text">This project was a re-interpretation of Van Gogh's famous Sunflower series of paintings.</p>
+				<ul>
+					<li>Musically, each painting was assigned a key on the circle of 5ths, based on their respective "darkness" of scale/color.</li>
+					<li>Each key had a handful of guitar passages assigned, which were improvised based on the codes of the most common hex colors, backed with a soft synth pad for atmosphere.</li>
+					<li>The chances of each passage playing corresponded to their color's frequency in the painting. Every so often the key and underlying painting would change as well.</li>
+					<li>Visually, each of the paintings would be reduced to the most common colors stretched to the window's size, and when a crummy beat detector found a "beat," it would create or destroy <a class="decorated-links" href="https://en.wikipedia.org/wiki/Voronoi_diagram">voronoi shapes,</a> sampling the colors beneath.</li>
+				</ul>
+				<p></p>
 			</div>
 			<iframe class="project-video-embed" src="https://www.youtube.com/embed/UDA2EpzhcHI" title="YouTube video player, with a screen recording of In Living Color running." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-			<p></p>
+			<p>The piece was intended to be projected and left running in a gallery, with the goal was to create something new while maintaining a sense of the creative act in the first place: that is, structured and informed improvisation, where the little details are lost to time.</p>
 			<a class="undecorated-links" href="https://drive.google.com/file/d/1k4-Oh8gM139GGG1JEHBEauaH6G2hxfS7/view">
 				<button class="download-button">Download the program</button>
 			</a>
