Added Marathon to Anticipated Games

--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
 			<h4 class="remove-top-margin-text">Anticipated games:</h4>
 			<ul>
 				<li>Dwarf Fortress (Adventure Mode w/ Graphics)</li>
+				<li>Marathon</li>
 				<li>Haunted Chocolatier</li>
 			</ul>
 			<h6>I don't anticipate many games because I'm behind the curve as it is. So many good ones already out, so many I just don't know about yet!</h6>
