Update to games lists

--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
 		<div class="content-bio-favgames-column-1">
 			<h4 class="remove-top-margin-text">Favorite games lately:</h4>
 			<ul>
+				<li>Forza Motorsport</li>
 				<li>Morrowind</li>
 				<li>Dredge</li>
 				<li>Art of Rally</li>
