Tablet view polish & minor accessibility
Largely CSS changes to the Tablet sized view. Brought back the social links in the header, made the buttons look better (and the favorite game text), etc.

Also updated the Roboxing preview image to be more readable for all forms of colorblindness.

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 		</div>
 		<script src="https://player.vimeo.com/api/player.js"></script>
 	</div>
-<!--Temp disclaimer, delete when "finished"-->
-	<div id="container-disclaimer-text">
+<!--Currently a disclaimer but will lead to an Audio Described version of the sound design reel when the site is "finished"-->
+	<div id="container-reel-text">
 		<p>This site is under construction as I learn HTML.</p>
 	</div>
 	<hr class="main_hr">
