Tablet formatting for Games and More
What the commit says. Made video and slideshow embeds show correctly, and made the More page passably formatted (that stupid Github repo button still evades me).

--- a/more/index.html
+++ b/more/index.html
@@ -65,7 +65,7 @@
 			<div class="project-content-right">
 				<img id="img-reaper-logo" src="../images/ReaScripts_onPage.jpg" alt="Logo for Reaper, Logan's favorite Digital Audio Workstation."/>
 				<a class="undecorated-links" href="https://github.com/Snoopy20111/snoop-ReaScripts">
-					<button class="download-button" style="margin-left:45px">See the Github Repo</button>
+					<button class="download-button" id="button-reaper-repo">See the Github Repo</button>
 				</a>
 			</div>
 		</div>
