Added Itch Download for THWTD
Also tweaked the CSS margins for download buttons to give a little more space when shown vertically.

--- a/games/index.html
+++ b/games/index.html
@@ -144,6 +144,9 @@
 				<a class="undecorated-links" href="https://store.steampowered.com/app/1759460/The_House_Where_They_Dwell/">
 					<button class="download-button">Download on Steam</button>
 				</a>
+				<a class="undecorated-links" href="https://halfbraingames.itch.io/the-house-where-they-dwell">
+					<button class="download-button">Download on Itch.io</button>
+				</a>
 			</div>
 		</div>
 		<hr class="minor_hr">
