Replacing Placeholder redesign
Dropping in the old Halo 5 trailer rescore instead of a placeholder. Not super proud of the rescore but I don't have anything else I can slot in, and the formatting breaks otherwise.

--- a/more/index.html
+++ b/more/index.html
@@ -129,8 +129,8 @@
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/HdBcm-ChUrU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</div>
 			<div class="project-content-right">
-				<h3 class="subproject-title">Placeholder Title</h3>
-				<iframe class="project-video-embed" src="https://www.youtube.com/embed/vuzy2OsVy1c" title="YouTube video player with a funny placeholder video, showing sequences from The Simpsons overdubbed with sfx and voicelines from the 1998 game Half-Life." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<h3 class="subproject-title">Halo 5 Trailer (Rescore)</h3>
+				<iframe class="project-video-embed" src="https://www.youtube.com/embed/UsHMSY8uVgQ?si=ljpiKKhqUZm3-F2h" title="Halo 5 Trailer (Rescore)." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</div>
 		</div>
 	</div>
