--- a/games/index.html
+++ b/games/index.html
@@ -84,7 +84,7 @@
 			<div class="project-content-right">
 				<iframe class="project-slideshow-embed" src="https://docs.google.com/presentation/d/e/2PACX-1vQILrF1h5PX8bnlpLd31Tak1mKvQmsWZQmC_PLxb9i-gn-VCxcAwd5QL9aVWdI7G7I7GHnoD0pkeJKO/embed?start=false&loop=true&delayms=30000" frameborder="1" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 				<p>Technically, it was a challenge, as it was built with a home-grown ECS implementation before DOTS. In terms of art and theory though, it helped give structure to the approach I use professionally today.</p>
-				<a class="undecorated-links" href="https://library.scad.edu/record=b1937300">
+				<a class="undecorated-links" href="https://github.com/Snoopy20111/FPSSample">
 					<button class="download-button">See the GitHub Project</button>
 				</a>
 				<a class="undecorated-links" href="https://library.scad.edu/record=b1937300">
