Updated Reascript Repo Links
Moved my Reascripts to a new repo this evening so I've updated the links accordingly.

--- a/more/index.html
+++ b/more/index.html
@@ -58,13 +58,13 @@
 		<div class="project-div">
 			<div class="project-content-left">
 				<p class="remove-top-margin-text">A repository of Reapack compliant Lua scripts used for Reaper. Mostly simple utilities.<br>If you're interested and have Reapack, go to Extensions > Reapack > Import Repositories... and paste the following:</p>
-				<a class="decorated-links" href="https://raw.githubusercontent.com/Snoopy20111/snoop-ReaScripts/main/index.xml">
-					<p>https://raw.githubusercontent.com/Snoopy20111/snoop-ReaScripts/main/index.xml</p>
+				<a class="decorated-links" href="https://github.com/Snoopy20111/Snoopy20111-ReaScripts/raw/master/index.xml">
+					<p>https://github.com/Snoopy20111/Snoopy20111-ReaScripts/raw/master/index.xml</p>
 				</a>
 			</div>
 			<div class="project-content-right">
 				<img id="img-reaper-logo" src="../images/ReaScripts_onPage.jpg" alt="Logo for Reaper, Logan's favorite Digital Audio Workstation."/>
-				<a class="undecorated-links" href="https://github.com/Snoopy20111/snoop-ReaScripts">
+				<a class="undecorated-links" href="https://github.com/Snoopy20111/Snoopy20111-Reascripts">
 					<button class="download-button" id="button-reaper-repo">See the Github Repo</button>
 				</a>
 			</div>
