--- a/games/index.html
+++ b/games/index.html
@@ -10,9 +10,10 @@
 
 <body>
 <div class="content">
+	<a class="skip-to-content-link-top" href="#Forza">Jump to content</a>
 <!--Header (stationary)-->
 	<div class="header-hero">
-		<img id="img-home" src="../images/Logo_Home.svg" alt="Logan's logo. On a black background, a white rounded rectangle sits at an angle, with thin parallel lines and blocks on those lines resembling faders on a mixing board." />
+		<img id="img-home" src="../images/Logo_Home.svg" alt="Logan's logo. On a black background, a white rounded rectangle sits at an angle, with blocks and thin parallel lines inside it resembling faders on a mixing board." />
 		<div class="header-hero-text-and-div">
 			<h1 id="container-header-text">Logan Hardin</h1>
 			<hr id="container-header-hr">
@@ -22,29 +23,23 @@
 	<div class="header-sidekick">
 		<div class="header-sidekick-background">
 		<div class="header-sidekick-buttons">
-			<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/">
-				<button class="header-button">Home</button>
-			</a>
-			<button class="header-button-disabled">Games</button>
-			<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/more">
-				<button class="header-button">More</button>
-			</a>
-			<a class="undecorated-links" target="_blank" href="../resume.pdf">
-				<button class="header-button">Resume</button>
-			</a>
+			<a class="header-button-link" target="_self" href="https://loganhardin.xyz/">Home</a>
+			<a class="header-button-disabled">Games</a>
+			<a class="header-button-link" target="_self" href="https://loganhardin.xyz/more">More</a>
+			<a class="header-button-link" target="_blank" href="resume.pdf">Resume</a>
 		</div>
 		<div class="header-sidekick-links">
 			<a class="undecorated-links" target="_self" href="https://twitter.com/Snoopy_20111">
-				<img id="img-twitter-header" src="../images/icon_twitter.svg" alt="Twitter Logo and link to Logan's Twitter page." />
+				<img id="img-twitter-header" src="../images/icon_twitter.svg" alt="Twitter Logo and link to Logan's Twitter profile." />
 			</a>
 			<a class="undecorated-links" target="_self" href="https://www.linkedin.com/in/logan-hardin-b5a3a3139/">
 				<img id="img-linkedin-header" src="../images/icon_linkedin.svg" alt="LinkedIn logo and link to Logan's LinkedIn page." />
 			</a>
 			<a class="undecorated-links" target="_self" href="https://snoopy20111.bandcamp.com/">
-				<img id="img-bandcamp-header" src="../images/icon_bandcamp.svg" alt="Bandcamp logo and link to Logan's old Bandcamp. Following this link is not advised." />
+				<img id="img-bandcamp-header" src="../images/icon_bandcamp.svg" alt="Bandcamp logo and link to Logan's old Bandcamp." />
 			</a>
 			<a class="undecorated-links" target="_self" href="https://www.tumblr.com/snoopy20111">
-				<img id="img-tumblr-header" src="../images/icon_tumblr.svg" alt="Tumblr logo and link to Logan's Tumblr account. This is significantly less professional, listener discretion is advised." />
+				<img id="img-tumblr-header" src="../images/icon_tumblr.svg" alt="Tumblr logo and link to Logan's Tumblr account, which is significantly less professional." />
 			</a>
 		</div>
 		</div>
@@ -60,7 +55,7 @@
 				<p class="remove-top-margin-text">See you at the starting line!<br><br>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae justo eget magna fermentum iaculis eu non diam. Nibh venenatis cras sed felis eget velit aliquet sagittis. Volutpat consequat mauris nunc congue nisi vitae. Suscipit adipiscing bibendum est ultricies. Eu scelerisque felis imperdiet proin fermentum leo vel orci. Egestas sed tempus urna et pharetra pharetra massa.</p>
 			</div>
 			<div class="project-content-right">
-				<iframe class="project-video-embed" src="https://www.youtube.com/embed/em4gv1Ietko" title="Forza Motorsport 2023 Trailer, without Audio Description" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<iframe class="project-video-embed" src="https://www.youtube.com/embed/em4gv1Ietko" title="YouTube player showing Forza Motorsport 2023 Trailer, without Audio Description" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</div>
 		</div>
 		<div class="project-div">
@@ -84,12 +79,8 @@
 			<div class="project-content-right">
 				<iframe class="project-slideshow-embed" src="https://docs.google.com/presentation/d/e/2PACX-1vQILrF1h5PX8bnlpLd31Tak1mKvQmsWZQmC_PLxb9i-gn-VCxcAwd5QL9aVWdI7G7I7GHnoD0pkeJKO/embed?start=false&loop=true&delayms=30000" frameborder="1" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 				<p>Technically, it was a challenge, as it was built with a home-grown ECS implementation before DOTS. In terms of art and theory though, it helped give structure to the approach I use professionally today.</p>
-				<a class="undecorated-links" href="https://github.com/Snoopy20111/FPSSample">
-					<button class="download-button">See the GitHub Project</button>
-				</a>
-				<a class="undecorated-links" href="https://library.scad.edu/record=b1937300">
-					<button class="download-button">Read the paper</button>
-				</a>
+				<a class="download-button-link" target="_self" href="https://github.com/Snoopy20111/FPSSample">See the GitHub Project</a>
+				<a class="download-button-link" target="_self" href="https://library.scad.edu/record=b1937300">Read the paper</a>
 			</div>
 		</div>
 	</div>
@@ -107,9 +98,7 @@
 			<div class="project-content-right">
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/l1bBcV8COYI" title="Roboxing screen recording, demonstrating the sound and action of the game" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 				<p>The full soundtrack is available for free from Bandcamp (embedded), and the game is available for free below.</p>
-				<a class="undecorated-links" href="https://tyler-eichten.itch.io/roboxing">
-					<button class="download-button">Download on Itch.io</button>
-				</a>
+				<a class="download-button-link" target="_self" href="https://tyler-eichten.itch.io/roboxing">Download on Itch.io</a>
 			</div>
 		</div>
 	</div>
@@ -141,12 +130,8 @@
 			<div class="project-content-right">
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/rjwaGpkC-1E" title="YouTube video player, with the trailer for The House Where They Dwell, for which I did minor video edits and all audio edits, largely with game assets. Note that this game is not accessible, and is much more jank than the trailer lets on." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 				<p>Due to artistic choices with the final boss being a topless spider witch, the game was listed as "Adults Only," despite no other suggestions of adult content. It's jank and buggy (pun not intended) and could have done with a few more months in the oven, but the vibes are immaculate.</p>
-				<a class="undecorated-links" href="https://store.steampowered.com/app/1759460/The_House_Where_They_Dwell/">
-					<button class="download-button">Download on Steam</button>
-				</a>
-				<a class="undecorated-links" href="https://halfbraingames.itch.io/the-house-where-they-dwell">
-					<button class="download-button">Download on Itch.io</button>
-				</a>
+				<a class="download-button-link" target="_self" href="https://store.steampowered.com/app/1759460/The_House_Where_They_Dwell/">Download on Steam</a>
+				<a class="download-button-link" target="_self" href="https://halfbraingames.itch.io/the-house-where-they-dwell">Download on Itch.io</a>
 			</div>
 		</div>
 		<hr class="minor_hr">
@@ -159,9 +144,7 @@
 			<div class="project-content-right">
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/Ea9yLA2ndrI" title="YouTube video player, with the trailer for Sumra, for which I did most of the audio editing. Note that this game is not accessible, and much more jank than the trailer lets on." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 				<p>You can view the project's website <a class="decorated-links" href="https://sumragame.wixsite.com/sumra">here</a> for more information.</p>
-				<a class="undecorated-links" href="https://drive.google.com/file/d/19CajfnW80dc4EeD3MGHF8TOU-q8x6ZQ-/view?usp=sharing">
-					<button class="download-button">Download from Google Drive</button>
-				</a>
+				<a class="download-button-link" target="_self" href="https://drive.google.com/file/d/19CajfnW80dc4EeD3MGHF8TOU-q8x6ZQ-/view?usp=sharing">Download from Google Drive</a>
 			</div>
 		</div>
 		<hr class="minor_hr">
@@ -176,8 +159,7 @@
 			<div class="project-content-right">
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/C72M7S4osKU?si=jCPjNNMdQOeOqWbV" title="YouTube video player, with gameplay of FooFarYall. This game is not accessible, but frankly, you're not missing much." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 				<p>You can find both tracks on my <a class="decorated-links" href="https://snoopy20111.bandcamp.com/album/hardin-a-collection-of-things-done-for-reasons">Bandcamp album of miscellaneous tracks,</a> and try the game with a friend if you like. </p>
-				<a class="undecorated-links" href="https://embyrs.itch.io/foofaryall">
-					<button class="download-button">Download from Itch.io</button>
+				<a class="download-button-link" target="_self" href="https://embyrs.itch.io/foofaryall">Download on Itch.io</a>
 			</div>
 		</div>
 	</div>
