--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 
 <body>
 <div class="content">
+	<a class="skip-to-content-link-top" href="#container-video-reel">Jump to content</a>
 <!--Header (stationary)-->
 	<div class="header-hero">
-		<img id="img-home" src="images/Logo_Home.svg" alt="Logan's logo. On a black background, a white rounded rectangle sits at an angle, with thin parallel lines and blocks on those lines resembling faders on a mixing board." />
+		<img id="img-home" src="images/Logo_Home.svg" alt="Logan's logo. On a black background, a white rounded rectangle sits at an angle, with blocks and thin parallel lines inside it resembling faders on a mixing board." />
 		<div class="header-hero-text-and-div">
 			<h1 id="container-header-text">Logan Hardin</h1>
 			<hr id="container-header-hr">
@@ -22,29 +23,23 @@
 	<div class="header-sidekick">
 		<div class="header-sidekick-background">
 		<div class="header-sidekick-buttons">
-			<button class="header-button-disabled">Home</button>
-			<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games">
-				<button class="header-button">Games</button>
-			</a>
-			<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/more">
-				<button class="header-button">More</button>
-			</a>
-			<a class="undecorated-links" target="_blank" href="resume.pdf">
-				<button class="header-button">Resume</button>
-			</a>
+			<a class="header-button-disabled">Home</a>
+			<a class="header-button-link" target="_self" href="https://loganhardin.xyz/games">Games</a>
+			<a class="header-button-link" target="_self" href="https://loganhardin.xyz/more">More</a>
+			<a class="header-button-link" target="_blank" href="resume.pdf">Resume</a>
 		</div>
 		<div class="header-sidekick-links">
 			<a class="undecorated-links" target="_self" href="https://twitter.com/Snoopy_20111">
-				<img id="img-twitter-header" src="images/icon_twitter.svg" alt="Twitter Logo and link to Logan's Twitter page." />
+				<img id="img-twitter-header" src="images/icon_twitter.svg" alt="Twitter Logo and link to Logan's Twitter profile." />
 			</a>
 			<a class="undecorated-links" target="_self" href="https://www.linkedin.com/in/logan-hardin-b5a3a3139/">
 				<img id="img-linkedin-header" src="images/icon_linkedin.svg" alt="LinkedIn logo and link to Logan's LinkedIn page." />
 			</a>
 			<a class="undecorated-links" target="_self" href="https://snoopy20111.bandcamp.com/">
-				<img id="img-bandcamp-header" src="images/icon_bandcamp.svg" alt="Bandcamp logo and link to Logan's old Bandcamp. Following this link is not advised." />
+				<img id="img-bandcamp-header" src="images/icon_bandcamp.svg" alt="Bandcamp logo and link to Logan's old Bandcamp." />
 			</a>
 			<a class="undecorated-links" target="_self" href="https://www.tumblr.com/snoopy20111">
-				<img id="img-tumblr-header" src="images/icon_tumblr.svg" alt="Tumblr logo and link to Logan's Tumblr account. This is significantly less professional, viewer and listener discretion is advised." />
+				<img id="img-tumblr-header" src="images/icon_tumblr.svg" alt="Tumblr logo and link to Logan's Tumblr account, which is significantly less professional." />
 			</a>
 		</div>
 		</div>
@@ -53,14 +48,13 @@
 <div class="content-main">
 <!--Embedded reel-->
 	<div id="container-video-reel">
+		<div id="container-reel-text">
+			<p class="small-text"><a class="decorated-links" target="_self" href="https://www.youtube.com/watch?v=DKP16d_WdZM">An Audio Described version of my reel may be found here...soon.</a></p>
+		</div>
 		<div style="padding:56.25% 0 0 0;position:relative;">
 			<iframe src="https://player.vimeo.com/video/878763365?badge=0&amp;autopause=0&amp;quality_selector=1&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute; top:0; left:0; width:100%; height:100%;" title="Sound Design Portfolio- 2023"></iframe>
 		</div>
 		<script src="https://player.vimeo.com/api/player.js"></script>
-	</div>
-<!--Currently a disclaimer but will lead to an Audio Described version of the sound design reel when the site is "finished"-->
-	<div id="container-reel-text">
-		<p>This site is under construction as I learn HTML.</p>
 	</div>
 	<hr class="main_hr">
 <!--Quick Links-->	
