--- a/more/index.html
+++ b/more/index.html
@@ -10,9 +10,10 @@
 
 <body>
 <div class="content">
+	<a class="skip-to-content-link-top" href="#ReaperScripts">Jump to content</a>
 <!--Header (stationary)-->
 	<div class="header-hero">
-		<img id="img-home" src="../images/Logo_Home.svg" alt="Logan's logo. On a black background, a white rounded rectangle sits at an angle, with thin parallel lines and blocks on those lines resembling faders on a mixing board." />
+		<img id="img-home" src="../images/Logo_Home.svg" alt="Logan's logo. On a black background, a white rounded rectangle sits at an angle, with blocks and thin parallel lines inside it resembling faders on a mixing board." />
 		<div class="header-hero-text-and-div">
 			<h1 id="container-header-text">Logan Hardin</h1>
 			<hr id="container-header-hr">
@@ -22,29 +23,23 @@
 	<div class="header-sidekick">
 		<div class="header-sidekick-background">
 		<div class="header-sidekick-buttons">
-			<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/">
-				<button class="header-button">Home</button>
-			</a>
-			<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games">
-				<button class="header-button">Games</button>
-			</a>
-			<button class="header-button-disabled">More</button>
-			<a class="undecorated-links" target="_blank" href="../resume.pdf">
-				<button class="header-button">Resume</button>
-			</a>
+			<a class="header-button-link" target="_self" href="https://loganhardin.xyz/">Home</a>
+			<a class="header-button-link" target="_self" href="https://loganhardin.xyz/games">Games</a>
+			<a class="header-button-disabled">More</a>
+			<a class="header-button-link" target="_blank" href="resume.pdf">Resume</a>
 		</div>
 		<div class="header-sidekick-links">
 			<a class="undecorated-links" target="_self" href="https://twitter.com/Snoopy_20111">
-				<img id="img-twitter-header" src="../images/icon_twitter.svg" alt="Twitter Logo and link to Logan's Twitter page." />
+				<img id="img-twitter-header" src="../images/icon_twitter.svg" alt="Twitter Logo and link to Logan's Twitter profile." />
 			</a>
 			<a class="undecorated-links" target="_self" href="https://www.linkedin.com/in/logan-hardin-b5a3a3139/">
 				<img id="img-linkedin-header" src="../images/icon_linkedin.svg" alt="LinkedIn logo and link to Logan's LinkedIn page." />
 			</a>
 			<a class="undecorated-links" target="_self" href="https://snoopy20111.bandcamp.com/">
-				<img id="img-bandcamp-header" src="../images/icon_bandcamp.svg" alt="Bandcamp logo and link to Logan's old Bandcamp. Following this link is not advised." />
+				<img id="img-bandcamp-header" src="../images/icon_bandcamp.svg" alt="Bandcamp logo and link to Logan's old Bandcamp." />
 			</a>
 			<a class="undecorated-links" target="_self" href="https://www.tumblr.com/snoopy20111">
-				<img id="img-tumblr-header" src="../images/icon_tumblr.svg" alt="Tumblr logo and link to Logan's Tumblr account. This is significantly less professional, listener discretion is advised." />
+				<img id="img-tumblr-header" src="../images/icon_tumblr.svg" alt="Tumblr logo and link to Logan's Tumblr account, which is significantly less professional." />
 			</a>
 		</div>
 		</div>
@@ -64,9 +59,7 @@
 			</div>
 			<div class="project-content-right">
 				<img id="img-reaper-logo" src="../images/ReaScripts_onPage.jpg" alt="Logo for Reaper, Logan's favorite Digital Audio Workstation."/>
-				<a class="undecorated-links" href="https://github.com/Snoopy20111/Snoopy20111-Reascripts">
-					<button class="download-button" id="button-reaper-repo">See the Github Repo</button>
-				</a>
+				<a class="download-button-link" target="_self" href="https://github.com/Snoopy20111/Snoopy20111-Reascripts">See the Github Repo</a>
 			</div>
 		</div>
 		<hr class="minor_hr">
@@ -113,9 +106,7 @@
 			</div>
 			<div class="project-content-left">
 				<p>Over the 5 years I maintained and expanded the mod, Solar Science managed somewhere around almost 50k downloads across all platforms. In early 2020 I handed the project off to KSP Forums user zer0Kerbal, who has maintained the mod since.</p>
-				<a class="undecorated-links" href="https://spacedock.info/mod/811/Solar%20Science">
-					<button class="download-button">Download the mod</button>
-				</a>
+				<a class="download-button-link" target="_self" href="https://spacedock.info/mod/811/Solar%20Science">Download the mod</a>
 			</div>
 		</div>
 	</div>
@@ -150,10 +141,8 @@
 				<p></p>
 			</div>
 			<iframe class="project-video-embed" src="https://www.youtube.com/embed/UDA2EpzhcHI" title="YouTube video player, with a screen recording of In Living Color running." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-			<p>The piece was intended to be projected and left running in a gallery, with the goal was to create something new while maintaining a sense of the creative act in the first place: that is, structured and informed improvisation, where the little details are lost to time.</p>
-			<a class="undecorated-links" href="https://drive.google.com/file/d/1k4-Oh8gM139GGG1JEHBEauaH6G2hxfS7/view">
-				<button class="download-button">Download the program</button>
-			</a>
+			<p>The piece was intended to be projected and left running in a gallery, with the goal to create something new while maintaining a sense of the creative act in the first place: that is, structured and informed improvisation, where the little details are lost to time.</p>
+			<a class="download-button-link" target="_self" href="https://drive.google.com/file/d/1k4-Oh8gM139GGG1JEHBEauaH6G2hxfS7/view">Download the program</a>
 		</div>
 	</div>
 </div>
