Fixed Resume link
Accidentally broke the path when coming from the Games or More pages.

--- a/games/index.html
+++ b/games/index.html
@@ -26,7 +26,7 @@
 			<a class="header-button-link" target="_self" href="https://loganhardin.xyz/">Home</a>
 			<a class="header-button-disabled">Games</a>
 			<a class="header-button-link" target="_self" href="https://loganhardin.xyz/more">More</a>
-			<a class="header-button-link" target="_blank" href="resume.pdf">Resume</a>
+			<a class="header-button-link" target="_blank" href="../resume.pdf">Resume</a>
 		</div>
 		<div class="header-sidekick-links">
 			<a class="undecorated-links" target="_self" href="https://twitter.com/Snoopy_20111">
